# xmonadrc

./: GNUmakefile  README.md  stack.yaml  xmonadrc.cabal  xmonadrc.hs
